# google-cloud

./: README.md  pyproject.toml
gcloud/speech2text/: main.py
gcloud/text2speech/: main.py
