[tool.poetry]
name = "gcloud"
version = "0.1.0"
description = ""
authors = ["Masashi SAKAI <masashi.sakai1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-speech = "^2.19.0"
pyaudio = "^0.2.13"
google-cloud-texttospeech = "^2.14.1"
# 自分の環境ではPyAudioでの再生が不安定だったのでpydubを使う
pydub = "^0.25.1"
# pydubで推奨されているので追加
simpleaudio = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
